--- a/tb2_bringup/package.xml
+++ b/tb2_bringup/package.xml
@@ -9,6 +9,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>slam_toolbox</depend>
+  <depend>rplidar_ros</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
